# pico-bootrom-rp2350

./: .gitignore  .gitmodules  CMakeLists.txt  NOTES.md  README.md  SPIV_PUBLSHING.md  TODO.md  TODO_A1.md  bin2hex.py  make-combined-bootrom.sh  spoon_label.sh
scripts/: bin2hex  check_function_returns  check_rom_table_duplicates  check_sg_symbols  check_useless_canaries  check_useless_rcps  count_function_calls  find_wasteful_riscv_j_jal  fixup_asm_hooks  inject_p16  inject_rcp_consts  make_import_header  make_import_ld  overwrite_prolog  scramble_canary_tags  xh3bextm_dis
spec/: A0_HACKS.md  BINARIES.md  BOOTPATH.md  BOOT_CONCEPTS.md  LAYOUT.md  OTP.md  PARTITION_TABLE.md  PERMISSIONS.md  SERIALBOOT.md  ybyb.xlsx
src/: CMakeLists.txt  bootrom_layout.template.h
src/common/: CMakeLists.txt  bootrom_assert.h  bootrom_common.h  native_exports.h  nsboot_config.h  nsboot_secure_calls.h  varm_to_riscv_hints.h
src/main/: CMakeLists.txt
src/main/arm/: CMakeLists.txt  arm8_bootrom_rt0.S  arm8_misc.S  arm8_nsboot_vm.c  arm8_s_from_ns_wrappers.c  arm8_secure_gateways.S  arm8_sig.c  arm8_sig.h  arm8_validate_ns_buffer.c  arm8_validate_ns_buffer.h  bootrom_arm.template.ld  varm_apis.c  varm_blocks.c  varm_boot_path.c  varm_boot_path.h  varm_checked_flash.c  varm_checked_flash.h  varm_flash_boot.c  varm_flash_permissions.c  varm_flash_permissions.h  varm_generic_flash.c  varm_launch_image.c  varm_misc.S  varm_nsboot.c  varm_otp.c  varm_resets.h  varm_s_from_nsboot_wrappers.c
src/main/native/: CMakeLists.txt  bootram.h  bootrom.h  bootrom_error.h  bootrom_otp.h  hardening.h  native_generic_flash.c  native_generic_flash.h  rcp_tags.h
src/main/riscv/: CMakeLists.txt  bootrom_riscv.template.ld  bootrom_riscv_asm_macros.inc.S  riscv_apis.c  riscv_bootrom_rt0.S  riscv_misc.S  riscv_nsboot_vm.c  riscv_varm_wrapper.c  rom_table.S  varmulet_hooks_bootrom.S  varmulet_hooks_bootrom.h
src/mini_printf/: CMakeLists.txt  mini_printf.c  mini_printf.h
src/nsboot/: CMakeLists.txt  fat_dir_entries.h  index_html.h  info_uf2_txt.h  ms_os_20_descriptor_set_headers.h  nsboot.c  nsboot.template.ld  nsboot_asm.S  nsboot_async_task.c  nsboot_async_task.h  nsboot_uart.h  nsboot_uart_client.S  nsboot_usb_client.c  nsboot_usb_client.h  scsi.h  scsi_ir.h  usb_msc.c  usb_msc.h  usb_virtual_disk.c  usb_virtual_disk.h
src/nsboot/generator/: CMakeLists.txt  main.c
src/nsboot/native/: CMakeLists.txt  nsboot.h  nsboot_arch_adapter.h  usb_common.h  usb_device.c  usb_device.h  usb_device_private.h  usb_stream_helper.c  usb_stream_helper.h
testing/: APP_UPDATE_POC.md  BOOT_TESTING.md  FUZZING_SECURITY.md  TEST_WHITE_LABEL.md  USB_CV.md
